--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,12 @@
   width: 100%;
   height: 100%;
 }
+
+.piece-container {
+  cursor: grab;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+} 
