--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
 }
 
 .container {
-  min-height: calc(100vh - 52px);
+  min-height: 100vh;
   min-width: 100vw;
   display: flex;
   flex-direction: column;
